--- a/index.html
+++ b/index.html
@@ -14,8 +14,27 @@
 <body>
     <div class="container">
         <header>
-            <nav class="desktop">
+            <!-- <nav class="desktop">
+                <div class="mobile">
+                    <div class="line-1"></div>
+                    <div class="line-2"></div>
+                    <div class="line-3"></div>
+                </div>
                 <ul>
+                    <li><a href="#skills">Sobre</a></li>
+                    <li><a href="#projetos">Projetos</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+            </nav> -->
+
+            <nav>
+                <a class="tlt">My Portifólio</a>
+                <div class="mobile-menu">
+                    <div class="line-1"></div>
+                    <div class="line-2"></div>
+                    <div class="line-3"></div>
+                </div>
+                <ul class="nav-list">
                     <li><a href="#skills">Sobre</a></li>
                     <li><a href="#projetos">Projetos</a></li>
                     <li><a href="#contato">Contato</a></li>
@@ -27,10 +46,10 @@
         <div class="section">
             <div class="center">
                 <div id="skills">
-                <h3>Conheça mais</h3>
-                <div class="foto">
-                </div>
-                <div class="container-section">
+                    <h3>Conheça mais</h3>
+                    <div class="foto">
+                    </div>
+                    <div class="container-section">
                         <div class="skill">
                             <h2>
                                 Quem sou
@@ -73,7 +92,7 @@
                     studio Code, html e css.</p>
             </div>
 
-           
+
         </div>
         <div class="landing">
             <img src="maps.png" width="40%" height="80%">
@@ -83,10 +102,10 @@
                     tempo real a localização da empresa. Feita utilizando HTML CSS e JS.</p>
             </div>
 
-          
+
         </div>
         <div class="landing">
-            <img src="maps.png" width="40%" height="80%">
+            <img src="news.png" width="40%" height="80%">
             <div class="sobre">
                 <h2>Site de Notícia</h2>
                 <p>Site de notícia com servidor local. Feito utilizando PHP, CSS, nodejs, e mongodb.</p>
@@ -99,7 +118,8 @@
         <h2>Links Uteis</h2>
         <ul class="links">
             <li><a href="https://github.com/Joaovitorsantozz" target="_blank"><img src="git.png" /></a></li>
-            <li><a href="https://www.linkedin.com/in/joão-vitor-santos-6b32a5244/" target="_blank"><img src="linkedin.png" /></a></li>
+            <li><a href="https://www.linkedin.com/in/joão-vitor-santos-6b32a5244/" target="_blank"><img
+                        src="linkedin.png" /></a></li>
         </ul>
     </div>
     </div>
@@ -112,7 +132,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
-
+      <script src="mobile-navbar.js"></script>
 </body>
 
 </html>
